Fixed: white space in bottom, below footer.

--- a/responsive-menu/style.css
+++ b/responsive-menu/style.css
@@ -1,3 +1,7 @@
+html {
+	background: #65616B;
+}
+
 body {
 	display: block;
 	margin: 0;
